 * Removed type-based help.
 * New XML utility method: contents_of which returns the children of a
    node in a doc fragment.

2006-11-04 cjg
 * Subjects now work inside compound fields

2006-11-05 cjg 
 * Added "Add User" feature
 * Tidied up citations/user/screen.xml
 * Fixed bug in rendering user/screen citation 

2006-11-06 cjg
 * Saved search workflows now are in the generic lib config, not part of the
    repository.

2006-11-06 tdb
 * Modified get_input and get_input_hidden to remove return (CR) as well
 * Added ownerDocument to XML::DOM compatibility
 * Removed AuthDBI from requirements (unused?)
 * Added copy() to EPrints::Utils to copy files from one location to another
    in a cross-platform compatible manner
 * Removed file-handle based copying
 * Replaced all chomp()s with s/\015?\012?$/s

2006-11-06 cjg
 * Reworked parser in Import::DefaultXML to be more SAXY.

2006-11-06 cjg
 * Moved testing the correct UID into the Platform module because it won't
    work on all platforms.
 * Changed $dataobj->get_url( 1 ) to dataobj->get_control_url.
 * Fixed bug in getting new ids for saved searches.
 * Removed debug code from index-stopping-screen
 * Citations now can have /lib level ones as well as repository specific.
 * Fixed bug in edit-linking documents in Details.pm
 * Moved the administer user action to the bottom of the list.
 * Added the description of the search as a parameter to the savedsearch 
    workflow.
 * Added a default citation for saved searches.
 * Removed extra info at the top of the run-saved-search page.
 * Name-Ajax-autocomplete now orders by number of eprints the name appaers
    on.
 * Removed unused coverimage code in eprint_render.pl
 * The last vestages of Apache::AuthDBI have been swept away.
 * Added label to user_radio_hideemail.
 * Added warning to indexer if a single session fails to start.

2006-11-06 tmb
 * Columns in Items and Editorial Screens now displayed according to user preference